fix scrollbar issue

--- a/src/views/modals/ModalSettings/ModalSettings.less
+++ b/src/views/modals/ModalSettings/ModalSettings.less
@@ -5,23 +5,21 @@
         .auto-complete-size {
             width: 100%;
         }
-
-        /deep/.ivu-modal-body {
-            overflow: hidden;
-            padding: 0.15rem 0.3rem;
-        }
     }
 
     .settings-container {
         display: grid;
         grid-template-columns: 20% 80%;
         padding: 0 !important;
-        height: 6.7rem;
-        overflow: hidden;
         margin: -0.15rem -0.3rem;
     }
 }
-
+/deep/.ivu-modal-body {
+    max-height: none;
+    overflow-y: hidden;
+    height: 6.8rem;
+    padding: 0.15rem 0.3rem;
+}
 .nav-links-wrapper {
     border-right: 2px solid @grayLight;
     width: 2.2rem;
